# sinking-budget-old

./: .env  Cargo.toml
migrations/2019-05-31-030026_create_budgets/: up.sql
migrations/2019-05-31-030327_create_users/: up.sql
migrations/2019-05-31-030515_create_users_budgets/: down.sql  up.sql
migrations/2019-05-31-030827_create_categories/: up.sql
migrations/2019-05-31-031036_create_budgets_categories/: down.sql  up.sql
migrations/2019-05-31-031347_create_contributions/: up.sql
migrations/2019-05-31-031716_create_expenditure_kinds/: down.sql  up.sql
migrations/2019-05-31-032025_create_expenditures/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/models/: budget.rs  category.rs  contribution.rs  expenditure.rs  expenditure_kind.rs  mod.rs  user.rs
