[package]
name = "sinking-fund"
version = "0.1.0"
authors = ["Ethan Kent <ekent@jd11.law.harvard.edu>"]
edition = "2018"

[dependencies]
actix-web = "^1.0.8"
chrono = "^0.4.9"
diesel = { version = "^1.4.3", features = ["postgres", "chrono"] }
dotenv = "^0.14"
env_logger = "^0.7.1"
futures = "^0.1.29"
juniper = "^0.11"
serde = "^1.0"
serde_json = "^1.0"